# multi-agent-company

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/agents/: base.py
src/agents/developer/: agent.py  prompt.py  schema.py
src/agents/planner/: agent.py  prompt.py  schema.py
src/agents/reviewer/: agent.py  prompt.py  schema.py
src/agents/supervisor/: agent.py  prompt.py  schema.py
src/config/: settings.py
src/graph/: builder.py
src/main.egg-info/: SOURCES.txt  top_level.txt
src/multi_agent_software_company.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/services/: llm.py
src/shared/: enums.py  models.py  state.py
tests/: test_supervisor.py
